debugLinux.txt
amir.shirali-pour@etu.umontpellier.fr@i3:~$ cd Linux/
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ s -ltr
s : commande introuvable
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ ls -ltr
total 64
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681 9948 sept. 17 10:16  Mac.txt
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   19 sept. 17 11:13 '#amir#'
drwx------+ 3 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681    0 sept. 17 13:03  SYSTEME
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   40 sept. 24 10:12  b
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   22 sept. 24 10:13  c
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   42 sept. 24 10:15  d
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   16 sept. 24 10:31  a
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   81 sept. 24 10:51  amir.sh
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  127 sept. 24 11:22 '#wen.sh#'
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  222 oct.   1 10:03  wen.sh
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  679 oct.   1 16:41  test.py
drwx------+ 2 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681    0 oct.   2 11:52  DUMP
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  339 oct.   8 10:22  factoriel.py
-rw-------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681   16 oct.   8 10:33  test2.py
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  440 oct.   8 10:47  bonjour.py
-rwx------+ 1 amir.shirali-pour@etu.umontpellier.fr GL_e20190009681  690 oct.   8 11:04  nombrepremier.py
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ python3 nombrepremier.py 100
candidat =  3
















                        diviseur =  39
99  is divisable by  3
--------------------------
[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ od -a nombrepremier.py 
0000000   #   !   /   u   s   r   /   b   i   n   /   e   n   v  sp   p
0000020   y   t   h   o   n   3  nl   #  sp   -   *   -  sp   c   o   d
0000040   i   n   g   :  sp   u   t   f   8  sp   -   *   -  nl  nl  nl
0000060   i   m   p   o   r   t  sp   s   y   s  nl   i   m   p   o   r
0000100   t  sp   o   s  nl  nl  nl   n   p   =   [   2   ]  nl   i   s
0000120   T   r   u   e  sp   =  sp   T   r   u   e  nl  nl   i   f  sp
0000140   l   e   n   (   s   y   s   .   a   r   g   v   )  sp   =   =
0000160  sp   2   :  nl  sp  sp  sp  sp   n  sp   =  sp   i   n   t   (
0000200   s   y   s   .   a   r   g   v   [   1   ]   )  nl   f   o   r
0000220  sp   c   a   n   d   i   d   a   t  sp   i   n  sp   r   a   n
0000240   g   e   (   3   ,   n   )   :  nl  sp  sp  sp  sp   p   r   i
0000260   n   t  sp   (   "   c   a   n   d   i   d   a   t  sp   =  sp
0000300   "   ,   c   a   n   d   i   d   a   t   )  nl  sp  sp  sp  sp
0000320   f   o   r  sp   d   i   v   i   s   e   u   r  sp   i   n  sp
0000340   n   p   :  nl  sp  sp  sp  sp  sp  sp  sp  sp   p   r   i   n
0000360   t  sp   (   "   %   c   [   %   d   ;   %   d   f   "  sp   %
0000400  sp   (   0   x   1   B   ,  sp   4   0   ,  sp   2   5   )   ,
0000420  sp   e   n   d   =   '   '   )  nl  sp  sp  sp  sp  sp  sp  sp
0000440  sp   p   r   i   n   t   (   "   d   i   v   i   s   e   u   r
0000460  sp   =  sp   "   ,   d   i   v   i   s   e   u   r   )  nl  sp
0000500  sp  sp  sp  sp  sp  sp  sp   i   f  sp   (   c   a   n   d   i
0000520   d   a   t  sp   %  sp   d   i   v   i   s   e   u   r   )  sp
0000540   =   =  sp   0   :  nl  sp  sp  sp  sp  sp  sp  sp  sp  sp  sp
0000560  sp  sp   p   r   i   n   t   (   c   a   n   d   i   d   a   t
0000600   ,   "  sp   i   s  sp   d   i   v   i   s   a   b   l   e  sp
0000620   b   y  sp   "   ,   d   i   v   i   s   e   u   r   )  nl  sp
0000640  sp  sp  sp  sp  sp  sp  sp  sp  sp  sp  sp   i   s   T   r   u
0000660   e  sp   =  sp   F   a   l   s   e  nl  sp  sp  sp  sp  sp  sp
0000700  sp  sp  sp  sp  sp  sp   b   r   e   a   k  nl  sp  sp  sp  sp
0000720  sp  sp  sp  sp   #   #  sp   e   n   d  sp   o   f  sp   i   f
0000740  nl  sp  sp  sp  sp  sp  sp  sp  sp   e   l   s   e   :  nl  sp
0000760  sp  sp  sp  sp  sp  sp  sp  sp  sp  sp  sp   i   s   T   r   u
0001000   e  sp   =  sp   T   r   u   e  nl  sp  sp  sp  sp   i   f  sp
0001020   i   s   T   r   u   e  sp   =   =  sp   T   r   u   e   :  nl
0001040  sp  sp  sp  sp  sp  sp  sp  sp   n   p   .   a   p   p   e   n
0001060   d   (   c   a   n   d   i   d   a   t   )  nl  sp  sp  sp  sp
0001100  sp  sp  sp  sp   p   r   i   n   t   (   "   I  sp   f   o   u
0001120   n   d   :  sp   "   ,   c   a   n   d   i   d   a   t   )  nl
0001140  sp  sp  sp  sp   #   #  sp   e   n   d  sp   o   f  sp   f   o
0001160   r  nl  sp  sp  sp  sp   p   r   i   n   t   (   "   -   -   -
0001200   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -   -
0001220   -   -   -   -   -   -   -   "   )  nl  nl   #   #  sp   e   n
0001240   d  sp   o   f  sp   f   o   r  nl   p   r   i   n   t   (   n
0001260   p   )
0001262
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ python3 --version
Python 3.6.8
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ python nombrepremier.py 100
  File "nombrepremier.py", line 17
    print ("%c[%d;%df" % (0x1B, 40, 25), end='')
                                            ^
SyntaxError: invalid syntax
amir.shirali-pour@etu.umontpellier.fr@i3:~/Linux$ 
